--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,10 +10,10 @@ html, body {
     height: 100%;
     margin: 0;
     background: #555555;
-    background-image: -webkit-radial-gradient(cover, #f1f1f1, #cbcbcb);
-    background-image: -moz-radial-gradient(cover, #f1f1f1, #cbcbcb);
-    background-image: -o-radial-gradient(cover, #f1f1f1, #cbcbcb);
-    background-image: radial-gradient(cover, #f1f1f1, #cbcbcb);
+    background-image: -webkit-radial-gradient(cover, #f1f1f1, #62adff);
+    background-image: -moz-radial-gradient(cover, #f1f1f1, #62adff);
+    background-image: -o-radial-gradient(cover, #f1f1f1, #62adff);
+    background-image: radial-gradient(cover, #f1f1f1, #62adff);
 
     display: flex;
     align-items: center;
@@ -23,7 +23,7 @@ html, body {
 .screen-container {
     border-radius: 2px;
     display: inline-block;
-    height: 480px;
+    height: 320px;
     margin: 1rem;
     position: relative;
     width: 992px;
