--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,3 +34,23 @@ html, body {
 .screen-container:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+#dashboard {
+  width: 600px;
+  margin-top: 20px;
+  font-family: Geneva, Arial, Helvetica, sans-serif;
+}
+
+#dashboard > ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  width: 600px;
+  justify-content: space-between;
+  opacity: 0.4;
+}
+
+#dashboard .key {
+  height: 21px;
+}
